# governance-dashboard

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md  VERSION  docker-compose.yml  package-lock.json  package.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: linguist.yml
.github/workflows/: backend-tests.yml  cd.yml  ci.yml  frontend-tests.yml  performance-tests.yml  publish-crates.yml  publish-npm.yml  security-tests.yml  security.yml  test-summary.yml
.release/: README.md
.release/configs/: .env.production
.release/scripts/: quick-start.sh
benchmarks/: Cargo.toml  README.md
benchmarks/examples/: run_benchmarks.rs
benchmarks/output/: .gitignore  summary.md
benchmarks/src/: io.rs  lib.rs  markdown.rs  result.rs
benchmarks/src/adapters/: audit_logging.rs  cost_calculation.rs  metrics_collection.rs  mod.rs  policy_evaluation.rs
database/: .env.example  COMPLETION_REPORT.md  README.md  SCHEMA.md  docker-compose.yml
database/init/: 01-init.sql
database/migrations/: 0010_billing_tables.sql  0011_organizations_and_cost_tracking.sql  001_create_extensions.sql  004_create_roles_tables.sql  008_create_alerts_table.sql  010_create_views.sql  README.md
database/scripts/: backup.sh  restore.sh  run_migrations.sh  verify_schema.sh
docs/: ADMIN_GUIDE.md  API_CHANGELOG.md  API_DOCUMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION_GUIDE.md  BACKEND_IMPLEMENTATION_SUMMARY.md  BUILD_AUTOMATION_GUIDE.md  BUILD_SCRIPTS_REPORT.md  COMPLETION_ROADMAP.md  COMPLIANCE_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVOPS_DEPLOYMENT_REPORT.md  FAQ.md  FEATURES.md  FILE_STRUCTURE.md  FINAL_DELIVERY_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  INSTALLATION_MATRIX.md  INTEGRATION_GUIDE.md  LICENSE.md  MANIFEST.md  MONITORING.md  PHASE_2B_INFRA_INTEGRATION.md  PRODUCTION_READINESS_CHECKLIST.md  PSEUDOCODE.md  PUBLISHING_TO_CRATES.md  QUICK_START.md  QUICK_START_BACKEND.md  README.md  RELEASE_NOTES.md  RELEASE_PACKAGE_README.md  RELEASE_SUMMARY.md  RELEASE_VALIDATION_REPORT.md  ROADMAP.md  RUST_WORKSPACE_SUMMARY.md  SCALING.md  SCRIPTS_QUICK_REFERENCE.md  (+13 more)
docs/openapi/: api-gateway.yaml  audit-service.yaml  auth-service.yaml  cost-service.yaml  integration-service.yaml  metrics-service.yaml  policy-service.yaml  user-service.yaml
frontend/: .env.example  COMPONENTS_SUMMARY.md  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/playwright-report/: index.html
frontend/src/: app.css  app.html
frontend/test-results/: junit.xml  results.json
helm/llm-governance/: Chart.yaml  README.md  values.yaml
k8s/base/: api-gateway.yaml  audit-service.yaml  auth-service.yaml  configmap.yaml  cost-service.yaml  frontend.yaml  hpa.yaml  ingress.yaml  integration-service.yaml  metrics-service.yaml  namespace.yaml  networkpolicy.yaml  policy-service.yaml  postgres.yaml  rbac.yaml  redis.yaml  secret.yaml  user-service.yaml
k8s/monitoring/: alertmanager.yaml  grafana.yaml  prometheus.yaml
libs/common/: Cargo.toml  README.md
libs/common/src/: error.rs  lib.rs  response.rs  utils.rs
libs/common/src/adapters/: analytics_hub.rs  change_impact.rs  cost_ops.rs  mod.rs  observatory.rs  policy_engine.rs  registry.rs  ruvector.rs
libs/database/: Cargo.toml  README.md
libs/database/migrations/: 002_create_base_functions.sql  003_create_users_and_auth_tables.sql  005_create_teams_table.sql  006_create_policies_table.sql  007_create_audit_logs_table.sql  009_create_metrics_tables.sql  011_create_seed_data.sql
libs/database/src/: lib.rs
libs/models/: Cargo.toml  README.md
libs/models/src/: audit.rs  cost.rs  lib.rs  metrics.rs  policy.rs  user.rs
plans/: 04-REFINEMENT.md  LLM-Governance-Dashboard-SPARC-Plan.md  Market-Ready-Implementation-SPARC.md
scripts/: build-all.sh  ci-pipeline.sh  db-migrate.sh  db-seed.sh  deploy-k8s.sh  deploy-local.sh  publish-crates.sh  publish-npm.sh  run-performance-tests.sh  setup-dev.sh  setup.sh  start-services.sh  stop-services.sh  test-all.sh
services/api-gateway/: Cargo.toml  Dockerfile
services/audit-service/: Cargo.toml  Dockerfile
services/audit-service/src/: main.rs
services/audit-service/src/config/: mod.rs
services/audit-service/src/handlers/: audit.rs  change_impact.rs  governance.rs  mod.rs
services/audit-service/tests/: change_impact_test.rs
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/src/: main.rs
services/auth-service/src/config/: mod.rs
services/auth-service/src/handlers/: auth.rs  auth_complete.rs  health.rs  mfa.rs  mod.rs  oauth.rs
services/auth-service/src/middleware/: auth_middleware.rs  mod.rs  rate_limit.rs
services/auth-service/src/models/: mod.rs
services/auth-service/src/services/: auth_service.rs  jwt_service.rs  mfa_service.rs  mfa_service_impl.rs  mod.rs  oauth_service.rs
services/auth-service/tests/: auth_handlers_test.rs  integration_test.rs  jwt_service_test.rs  mfa_service_test.rs  oauth_service_test.rs  rate_limit_test.rs
services/cost-service/: Cargo.toml  Dockerfile
services/cost-service/src/: main.rs
services/cost-service/src/config/: mod.rs
services/cost-service/src/handlers/: costs.rs  health.rs  mod.rs
services/cost-service/tests/: budget_tracking_test.rs  cost_calculation_test.rs  usage_aggregation_test.rs
services/integration-service/: Cargo.toml  Dockerfile
services/metrics-service/: Cargo.toml  Dockerfile
services/metrics-service/src/: main.rs
services/metrics-service/src/config/: mod.rs
services/metrics-service/src/handlers/: metrics.rs
services/policy-service/: Cargo.toml  Dockerfile
services/user-service/: Cargo.toml  Dockerfile
terraform/aws/: main.tf  variables.tf
terraform/azure/: main.tf
terraform/gcp/: main.tf
tests/integration/: api_gateway_test.rs  database_integration_test.rs  multi_service_test.rs  redis_integration_test.rs
tests/performance/: README.md  api-load-test.js  (+3 more)
(+129 files in other folders)
