[workspace]
resolver = "2"

members = [
    # Microservices
    "services/auth-service",
    "services/user-service",
    "services/policy-service",
    "services/audit-service",
    "services/metrics-service",
    "services/cost-service",
    "services/api-gateway",
    "services/integration-service",

    # Shared libraries (published to crates.io)
    "libs/common",
    "libs/database",
    "libs/models",

    # Benchmarks
    "benchmarks",
]

# Note: Services are not published to crates.io as they are application binaries

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["LLM Governance Team"]
license = "Apache-2.0"

[workspace.dependencies]
# Web Framework
actix-web = "4.9"
actix-rt = "2.10"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.3"
bcrypt = "0.15"

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# gRPC
tonic = "0.12"
prost = "0.13"

# Configuration
dotenv = "0.15"
config = "0.14"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment
envy = "0.4"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Rate Limiting
governor = "0.6"

# Metrics
prometheus = "0.13"

# Security
argon2 = "0.5"

# CORS
actix-cors = "0.7"

# Testing
mockall = "0.12"

# Additional dependencies
sha2 = "0.10"
rust_decimal = "1.33"

# LLM-Dev-Ops Ecosystem Dependencies (Phase 2A - compile-time only)
# These are upstream dependencies - verified no circular dependency on governance-dashboard
llm-policy-engine = { git = "https://github.com/LLM-Dev-Ops/policy-engine", branch = "main" }
llm-registry-core = { git = "https://github.com/LLM-Dev-Ops/registry", branch = "main" }
llm-cost-ops = { git = "https://github.com/LLM-Dev-Ops/cost-ops", branch = "main" }
llm-observatory-core = { git = "https://github.com/LLM-Dev-Ops/observatory", branch = "main" }
llm-analytics-hub = { git = "https://github.com/LLM-Dev-Ops/analytics-hub", branch = "main" }

# LLM-Dev-Ops Infra Dependencies (Phase 2B - Runtime infrastructure integration)
# Provides foundational utilities: config loading, logging, tracing, error handling, caching, retry, rate limiting
llm-infra-core = { git = "https://github.com/LLM-Dev-Ops/infra", branch = "main", features = ["config", "logging", "tracing", "errors", "cache", "retry", "rate-limit", "metrics"] }
