[package]
name = "llm-governance-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Hashing (for audit log checksums)
sha2 = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "llm_governance_benchmarks"
path = "src/lib.rs"
