[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# External dependencies
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenv.workspace = true
config.workspace = true

# Migration support
sqlx-cli = { version = "0.7.4", default-features = false, features = ["postgres"] }
