[package]
name = "llm-governance-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Database connection pooling and utilities for LLM Governance Dashboard with TimescaleDB support"
repository = "https://github.com/globalbusinessadvisors/llm-governance-dashboard"
documentation = "https://docs.rs/llm-governance-database"
homepage = "https://github.com/globalbusinessadvisors/llm-governance-dashboard"
keywords = ["database", "postgres", "timescaledb", "sqlx"]
categories = ["database"]
readme = "README.md"

[dependencies]
# External dependencies
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenv.workspace = true
config.workspace = true

# Migration support
sqlx-cli = { version = "0.7.4", default-features = false, features = ["postgres"] }
