[package]
name = "models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# External dependencies
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
thiserror.workspace = true

# Additional
strum = { version = "0.26", features = ["derive"] }
