[package]
name = "llm-governance-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared data models and types for LLM Governance Dashboard multi-tenant platform"
repository = "https://github.com/globalbusinessadvisors/llm-governance-dashboard"
documentation = "https://docs.rs/llm-governance-models"
homepage = "https://github.com/globalbusinessadvisors/llm-governance-dashboard"
keywords = ["models", "llm", "governance", "types"]
categories = ["data-structures"]
readme = "README.md"

[dependencies]
# External dependencies
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
thiserror.workspace = true

# Additional
strum = { version = "0.26", features = ["derive"] }
