[package]
name = "cost-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
llm-governance-common = { path = "../../libs/common" }
llm-governance-database = { path = "../../libs/database" }
llm-governance-models = { path = "../../libs/models" }

# External dependencies
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
dotenv.workspace = true
config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
validator.workspace = true
envy.workspace = true

# Service-specific dependencies
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
num-traits = "0.2"

# LLM-Dev-Ops Infra (Phase 2B) - config, logging, cache
llm-infra-core.workspace = true

[dev-dependencies]
mockall.workspace = true
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }
fake = "2.9"
quickcheck = "1.0"
