[package]
name = "metrics-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
llm-governance-common = { path = "../../libs/common" }
llm-governance-database = { path = "../../libs/database" }
llm-governance-models = { path = "../../libs/models" }

# External dependencies
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
dotenv.workspace = true
config.workspace = true
thiserror.workspace = true
anyhow.workspace = true
validator.workspace = true
envy.workspace = true
prometheus.workspace = true

# Service-specific dependencies
opentelemetry = "0.24"
opentelemetry-otlp = "0.17"
lazy_static = "1.5"
